Code refactored to properly adehere to model, services and controller architecture